--- a/webBanHang/webBanHang/bin/webBanHang.dll.config
+++ b/webBanHang/webBanHang/bin/webBanHang.dll.config
@@ -46,7 +46,5 @@
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-  <connectionStrings>
-    <add name="WebBanHangNongSan" connectionString="data source=DESKTOP-5O3T7FH\SQLEXPRESS;initial catalog=WebBanHangNongSan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-</configuration>
+  
+<connectionStrings><add name="WebBanHangNongSan" connectionString="data source=DESKTOP-5O3T7FH\SQLEXPRESS;initial catalog=WebBanHangNongSan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
