--- a/webBanHang/webBanHang/webBanHang.csproj
+++ b/webBanHang/webBanHang/webBanHang.csproj
@@ -1785,14 +1785,42 @@
     <Content Include="wwwroot\css\productDetail.css" />
     <Content Include="wwwroot\css\style.css" />
     <Content Include="wwwroot\images\anhBackGround.jpeg" />
+    <Content Include="wwwroot\images\BapBo.jpg" />
+    <Content Include="wwwroot\images\BapCai.jpg" />
+    <Content Include="wwwroot\images\BauSao.jpg" />
+    <Content Include="wwwroot\images\Bi.jpg" />
+    <Content Include="wwwroot\images\BuoiDaXanh.jpg" />
+    <Content Include="wwwroot\images\CaChep.jpg" />
+    <Content Include="wwwroot\images\CaLang.jpeg" />
+    <Content Include="wwwroot\images\Cam.jpg" />
+    <Content Include="wwwroot\images\Carot.jpg" />
+    <Content Include="wwwroot\images\ChuoiNgu.jpg" />
+    <Content Include="wwwroot\images\DauBap.png" />
+    <Content Include="wwwroot\images\DauTrach.jpeg" />
+    <Content Include="wwwroot\images\Dua.png" />
+    <Content Include="wwwroot\images\DuaLe.jpg" />
+    <Content Include="wwwroot\images\DuaXiem.jpg" />
+    <Content Include="wwwroot\images\Ga.jpeg" />
+    <Content Include="wwwroot\images\HauDa.jpeg" />
+    <Content Include="wwwroot\images\KhoQua.png" />
     <Content Include="wwwroot\images\logo1.png" />
     <Content Include="wwwroot\images\logo2.png" />
     <Content Include="wwwroot\images\logo3.png" />
+    <Content Include="wwwroot\images\MangCau.png" />
+    <Content Include="wwwroot\images\MangTay.png" />
+    <Content Include="wwwroot\images\Muop.png" />
     <Content Include="wwwroot\images\RauCaiChip.jpeg" />
     <Content Include="wwwroot\images\RauDen.jpeg" />
+    <Content Include="wwwroot\images\RauNgot.jpg" />
+    <Content Include="wwwroot\images\TaoAmbrosia.jpg" />
+    <Content Include="wwwroot\images\ThanBo.jpg" />
     <Content Include="wwwroot\images\ThitSuon.jpeg" />
     <Content Include="wwwroot\images\ThitSuon1.jpeg" />
+    <Content Include="wwwroot\images\TiaTo.jpg" />
     <Content Include="wwwroot\images\tom.jpeg" />
+    <Content Include="wwwroot\images\TrungCut.jpg" />
+    <Content Include="wwwroot\images\TrungGaTa.jpg" />
+    <Content Include="wwwroot\images\TrungVit.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
