--- a/webBanHang/webBanHang/Web.config
+++ b/webBanHang/webBanHang/Web.config
@@ -47,4 +47,4 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
  
-<connectionStrings><add name="WebBanHangNongSan" connectionString="data source=DESKTOP-5O3T7FH\SQLEXPRESS;initial catalog=WebBanHangNongSan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="WebBanHangNongSan" connectionString="data source=.\SQLEXPRESS;initial catalog=WebBanHangNongSan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
